# impact-map

./: README.md  pyproject.toml
codex/skills/impact-map/: SKILL.md
codex/skills/impact-map/agents/: openai.yaml
codex/skills/impact-map/evals/: evals.json
codex/skills/impact-map/evals/files/sample-mobile-app/: package.json
codex/skills/impact-map/evals/files/sample-mobile-app/app/: camera.tsx
codex/skills/impact-map/evals/files/sample-mobile-app/src/components/: CameraControls.tsx
codex/skills/impact-map/evals/files/sample-mobile-app/tests/: camera.test.ts
codex/skills/impact-map/evals/files/sample-shop-api/: package.json
codex/skills/impact-map/evals/files/sample-shop-api/src/bookings/: refunds.ts
codex/skills/impact-map/evals/files/sample-shop-api/src/payments/: stripe.ts
codex/skills/impact-map/evals/files/sample-shop-api/tests/: refunds.test.ts
codex/skills/impact-map/scripts/: sync-installed.sh
src/change_impact_analyzer/: __init__.py  analyzer.py  cli.py  extractors.py  mcp_server.py  models.py  report.py  scanner.py  scoring.py  text.py  validation.py
tests/: test_report.py  test_scoring.py  test_text.py  test_validation.py
