[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "change-impact-analyzer"
version = "0.1.0"
description = "A local CLI that predicts which files, tests, and risks matter for a requested code change."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Codex" }]
dependencies = []

[project.scripts]
cia = "change_impact_analyzer.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

